[gd_scene load_steps=2 format=3 uid="uid://82trd3xdarhx"]

[ext_resource type="Script" path="res://screens/meta_game_screen.gd" id="1_k8r5m"]

[node name="MetaGameScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_k8r5m")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.15, 0.2, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -552.0
offset_top = -300.0
offset_right = 552.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 128
text = "GOLD"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
custom_minimum_size = Vector2(8, 24)
layout_mode = 2

[node name="ResourcesContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="GoldContainer" type="VBoxContainer" parent="VBoxContainer/ResourcesContainer"]
layout_mode = 2

[node name="GoldIcon" type="Label" parent="VBoxContainer/ResourcesContainer/GoldContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "üí∞"
horizontal_alignment = 1

[node name="GoldLabel" type="Label" parent="VBoxContainer/ResourcesContainer/GoldContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "250 G"
horizontal_alignment = 1

[node name="Spacer" type="Control" parent="VBoxContainer/ResourcesContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2

[node name="MineralsContainer" type="VBoxContainer" parent="VBoxContainer/ResourcesContainer"]
layout_mode = 2

[node name="MineralsIcon" type="Label" parent="VBoxContainer/ResourcesContainer/MineralsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "‚õèÔ∏è"
horizontal_alignment = 1

[node name="MineralsLabel" type="Label" parent="VBoxContainer/ResourcesContainer/MineralsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "15 Minerals"
horizontal_alignment = 1

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="ButtonsContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="PlayButton" type="Button" parent="VBoxContainer/ButtonsContainer"]
custom_minimum_size = Vector2(200, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "PLAY"

[node name="HSeparator3" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="UpgradesContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="UpgradesTitle" type="Label" parent="VBoxContainer/UpgradesContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "UPGRADES"
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/UpgradesContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="UpgradesGrid" type="GridContainer" parent="VBoxContainer/UpgradesContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 2
